# OpenGL-Test

./: .astylerc  .cproject  .gitignore  .project  CMakeLists.txt  README.md  openpode_attache_milieu.mtl  suzanne.mtl
cmake/: glmConfig.cmake
shaders/: lamp.frag  simple.frag  simple.vert
src/: Camera.hpp  MathUtilities.hpp  Mesh.hpp  Model.hpp  Shader.hpp  gl.cpp  stb_image.h
